--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="text_main">El cannabis es originario de Asia Central y del Sur. Existen evidencias de inhalación de humo del cannabis que datan del tercer milenio A.C., tal y como indicarían las semillas de cannabis carbonizadas encontradas en el interior de un brasero ritual en un antiguo cementerio de la actual Rumania. También se sabe que el cannabis fue utilizado por los antiguos hindúes y sijs Nihang de la India y de Nepal durante miles de años. La hierba era llamada ganjika en sánscrito (ganja, en idiomas modernos de la India). El soma de drogas antiguas mencionado en los Vedas se asocia a veces con el cannabis.
                 El pueblo asirio también tenía conocimiento del cannabis y de sus propiedades psicoactivas. Bajo el nombre de qunubu (nombre que probablemente dio origen al posterior cannabis) lo utilizaban dentro de las ceremonias religiosas. El cannabis fue introducido al pueblo ario por los escitios y los tracios/dacios, cuyos chamanes (llamados kapnobatai, ‘los que caminan sobre el humo/las nubes’) quemaban flores de la planta para inducir estados de trance. En el noroeste de la Región Autónoma de Uigur en Xinjiang, en China, se encontró en 2003 una canasta de cuero llena de fragmentos de hoja y semillas de cannabis al lado de un chamán momificado, de unos 2500 a 2800 años de antigüedad.
                 </p>
-            <img src="./imgs/img_main.png" alt="imgMain" class="img_main" width="300px" height="300px">
+            <img src="./imgs/img_main.png" alt="planta_marihuana" class="img_main" width="300px" height="300px">
         </div>
     </main>
     <section>
